Reset all controllers now clears the portamento switch More doc updates

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.2 rc2
 
+2017-5-11 Will
+* Reset all controllers now clears the portamento switch.
+
 2017-5-9 Will
 * BugFix: Modulator amplitude envelope wasn't enabling.
 
