--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,3 +1,6 @@
+Suppress CLI prompt when disabled.
+
+NRPN channels.
 
 Fl::check() used too liberally. See where it can be removed - controls updating multiple windows seem the be the main problem.
 
