--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,6 +1,6 @@
-Suppress CLI prompt when disabled.
+Add scales control to CLI.
 
-NRPN channels.
+NRPN channels?
 
 Fl::check() used too liberally. See where it can be removed - controls updating multiple windows seem the be the main problem.
 
@@ -32,8 +32,6 @@ Make loading effect presets update the 'top' line.
 Startup state load doesn't set buffersize correctly - partially resolved. Size is ignored if loaded when already running (which is reasonable).
 
 Allow headless compilation.
-
-Add scales control to CLI.
 
 Make things like Echo delay either floats or much higher resolution.
 
