--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,20 @@
 yoshimi 1.5.2 M
 
+2017-5-28 Will
+* Revised Scales GUI layout.
+* Added sane limits to key maps.
+* Discovered XML saving anomaly so created new Config switch.
+  Forces *all* data to be saved when set.
+* dev_notes updates.
+
 2017-5-26 Will
-Started implementation of CLI scales access.
-BugFix: neither .scl or .kbm were checked for no file :(
+* Started implementation of CLI scales access.
+* BugFix: neither .scl or .kbm were checked for no file :(
 
 2017-5-24 Will
-BugFix: LV2 state restore was not setting partmaps.
-Yoshi can now work with both CLI and GUI disabled.
-Doc updates.
+* BugFix: LV2 state restore was not setting partmaps.
+* Yoshi can now work with both CLI and GUI disabled.
+* Doc updates.
 
 2017-5-12 Will
 * Merged in Robs SubSynth Overtones/Legato fix.
