--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.5.2 M
 
 2017-5-31 Will
 * Reorganised part map setting to remove multiple calls.
+* BugFix: Reverse scale centre was being set as type bool.
+* BugFix: Scale ratio values were limited to 127.
 
 2017-5-30 Will
 * Improved error traps and reporting.
