Scales no longer suffer from cumulative errors Removed some (now unnecessary) mutex locks

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-6-7 Will
+* Scales no longer suffer from cumulative errors :)
+* Removed some (now unnecessary) mutex locks.
+
 2017-6-5 Will
 * Improved accuracy of scale number<=>text conversions.
 * Added "Musical Scale.odf" to 'doc'.
