--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-6-8 Will
+* BugFix Loading scales wasn't updating name/comment.
+* Direct access - more scales controls available.
+
 2017-6-7 Will
 * Scales no longer suffer from cumulative errors :)
 * Removed some (now unnecessary) mutex locks.
