--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.2 M
 
+2017-6-11 Will
+* Improved scales compatibility with old files/ versions.
+
 2017-6-9 Will
 * BugFix: miscMsgPop wasn't checking index range.
 * Loading patch sets always zeros 'Solo' channel number.
