Added loopback for low priority functions into 'returns' Direct access writing now possible for all scale data Improved scales error reporting Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.2 M
 
+2017-6-16 Will
+* Added loopback for low priority functions into 'returns'.
+* Direct access writing now possible for all scale data.
+* Improved scales error reporting.
+  More to do.
+* Updated docs.
+
 2017-6-12 Will
 * Further refinements to scales accuracy
   (no longer needing doubles)
