Implemented CLI list tuning and keymap

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.2 M
 
 2017-6-21 Will
 * Revised CLI help menu for greater clarity.
+* Implemented CLI list tuning and keymap.
 
 2017-6-19 Will
 * CLI can now write or load tunings and keymaps.
