--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.2 M
 
+2017-7-1 Will
+* Config switches converted.
+
 2017-6-29 Will
 * Bugfix: CLI history was not being updated.
 * Removed empty virtual keyboard menu choice.
