--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.2 M
 
 2017-7-1 Will
 * Config switches converted.
+* Config jack & alsa converted.
 
 2017-6-29 Will
 * Bugfix: CLI history was not being updated.
