--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.2 M
 2017-7-1 Will
 * Config switches converted.
 * Config jack & alsa converted.
+  Discovered odd behaviour from the GUI with miscMsg.
+  Not a disaster but needs to be sorted.
 
 2017-6-29 Will
 * Bugfix: CLI history was not being updated.
