--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-7-13 Will
+* All Config limits defined.
+* Updated docs.
+
 2017-7-12 Will
 * Values can now be corrected for range by the CLI.
 * Controls can be set to defaults by the CLI.
