--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-7-14 Will
+* Created new 'config' CLI submenu.
+* Converted some 'normal' CLI config controls.
+
 2017-7-13 Will
 * All Config limits defined.
 * Updated docs.
