--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ yoshimi 1.5.2 M
 2017-7-15 Will
 * Completed conversion of CLI config controls.
 * Reorganised CLI code.
+* Config GUI also converted.
+* Reformatted config GUI code.
+  It was getting very untidy :(
 
 2017-7-14 Will
 * Created new 'config' CLI submenu.
