New editing options for formant filters
Added visual editing for formant filter parameters
  Mousewheel adjusts formant filter freq. range/center freq. depending on whether a shift key is held
  MMB adjusts center frequency, RMB adjusts Q, forward/back mouse buttons can be used to switch vowels

New tooltips for formant filters and some corrections/amendments for related controls
Updated float->int conversions which previously could lead to segfaults in edge cases
Minor refactoring of tooltip graphics  code

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,18 @@
 yoshimi 1.5.2 M
 
+
+2017-7-18 Jesper
+* Bugfix: Fixed segfault from edge cases when float->int
+  conversion was very close to zero in formant filter
+  transition calculations.
+* New formant filter editing tools - visual parameter
+  manipulation on the frequency graph, primarily
+  mouse-driven.
+* New tooltips for the formant filter control knobs and
+  amended related tooltips in filter envelopes/LFO's
+  to show the differences between formant filters and
+  the other types.
+
 2017-7-18 Will
 * Bugfix: Bank dropdown list was showing wrong entry
   on bank root change but actual contents correct.
