--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-7-22 Will
+* Minor optimisations and clarifications.
+* Updated man page.
+
 2017-7-21 Will
 * Removed some redundant code.
 * State load is now 'silent'.
