--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -12,7 +12,7 @@ The CLI help system is context sensitive, and apart from reminders of common ess
 .PP
 e.g. Within the 'part' context '? config' will show the commands for configuration settings.
 .PP
-\fBYoshimi\fP has recently gained a very extensive MIDI learn capability, exposing the majority of controls. The same MIDI CC and Channel pair can linked to multiple independent controls. There is also has considerable post-learn editing capability.
+\fBYoshimi\fP has recently gained a very extensive MIDI learn capability, exposing the majority of controls. The same MIDI CC and Channel pair can be linked to multiple independent controls. There is also considerable post-learn editing capability.
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
