--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,17 @@
 yoshimi 1.5.2 M
 
+2017-7-25 Jesper
+* Bugfix: Fixed segfault from edge cases when float->int
+  conversion was very close to zero in formant filter
+  transition calculations.
+* New formant filter editing tools - visual parameter
+  manipulation on the frequency graph, primarily
+  mouse-driven.
+* New tooltips for the formant filter control knobs and
+  amended related tooltips in filter envelopes/LFO's
+  to show the differences between formant filters and
+  the other types.
+
 2017-7-24 Will
 * Started refining loads and saves (state first).
 
