--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.2 M
 
+2017-7-28 Will
+* Refactored vector data structure.
+* It hasn't been purely nrpn based for a long time!
+
 2017-7-27 Will
 * Improved state save error reporting for GUI & CLI.
 * Tidied master GUI code.
