--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.2 M
 
+2017-7-30 Will
+* Corrected minor XML LV2 anomaly.
+* Optimised 'returnsDirect' access.
+* Loading scales from GUI now updates it!
+* Added microtonal demos to 'Examples'.
+
 2017-7-29 Will
 * Improved vector saving management.
 * Reset & state load now update Vector name :p
