--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,9 @@ yoshimi 1.5.2 M
 * Fixed regression. LV2 not loading patch sets.
   These are now properly contained, but I forgot to
   update (LV2 only) putalldata :(
+* Patched in Jesper's improved Console scroll behavoir.
+  New entries now at bottom and always visible unless
+  scroll bars moved.
 
 2017-8-3 Will
 * BugFix: Insertion effects were always on.
