Master reset no longer needs threadmessage function

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.2 M
 
+2017-8-5 Will
+* Master reset no longer needs threadmessage function.
+
 2017-8-4 Will
 * Properly integrated all patchset saves.
 * Improved patchset load operations & messaging.
