--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.2 M
 
+2017-8-7 Will
+* Part effects now display on CLI direct access call.
+
 2017-8-5 Will
 * Master reset no longer needs threadmessage function.
 * Further cleanups and doc corrections.
