--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.2 M
 
 2017-8-11 Will
 * Implimented CLI naming of vectors.
+* Corrected some CLI help entries.
 
 2017-8-10 Will
 * Further improvements to command test list values.
