Code cleanups Doc updates

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.2 M
 2017-8-13 Will + Rob
 * GUI DynFilter updates and learns correctly.
 * Learn bug sorted properly!
+* Code cleanups.
+* Doc updates.
 
 2017-8-12 Will
 * Added shortform NRPN to shutdown Yoshimi.
