Corrected GUI value for CLI resonance centre freq Resonance converted to lock-free Preparing PadSynth for conversion

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.3 M
 
+2017-8-24 Will
+* Corrected GUI value for CLI resonance centre freq.
+* Resonance converted to lock-free.
+* Preparing PadSynth for conversion.
+
 2017-8-22 Will
 * More speeling chucks :(
 
