--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.3 M
 2017-8-25 Will
 * Removed duplicated effects command from GUI.
 * PadSynth conversion completed.
+* Fixed regression - AddVoice bend adjust not working.
 
 2017-8-24 Will
 * Corrected GUI value for CLI resonance centre freq.
